Filter heading text align fixed

--- a/src/pages/ProductListing/Filters/filters.module.css
+++ b/src/pages/ProductListing/Filters/filters.module.css
@@ -1,6 +1,6 @@
 .filter_wrapper {
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   background-color: #fdfdfd;
   position: relative;
 }
